font size change caused overflow:solved

--- a/src/App.css
+++ b/src/App.css
@@ -17,10 +17,10 @@
     width: auto;
   }
   #header h1 {
-    font-size: 50px;
+    font-size: 40px;
   }
   header .intro-text{ 
-    padding-top: 100px;
+    padding-top: 160px;
   }
 
   #portfolio {
